tests/rosetta/transpiler/CPP/fibonacci-sequence-2.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/fibonacci-sequence-2.cpp:11:10: fatal error: boost/multiprecision/cpp_int.hpp: No such file or directory
   11 | #include <boost/multiprecision/cpp_int.hpp>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
